# osso-pdf-viewer

./: .git-blame-ignore-revs  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  com.nokia.osso_pdfviewer.service.in  osso-pdf-viewer.xml  osso_pdfviewer.desktop.in
debian/: README.Debian  changelog  control  copyright  docs  osso-pdf-viewer.install  osso-pdf-viewer.links  osso-pdf-viewer.postinst  osso-pdf-viewer.postrm  rules
fofi/: FoFiTrueType.cc  FoFiTrueType.h  FoFiType1.cc  FoFiType1C.cc  Makefile.am
goo/: GHash.cc  GMutex.h  GString.cc  GString.h  Makefile.am  allocatable.h  chunk.cpp  chunk.h  defines.h  gfile.cc  gfile.h  gmem.c  gmem.h  gmempp.cc  guard.h  lock.h  nolock.h  pool.h
splash/: FixedPoint.cc  Makefile.am  Splash.cc  SplashBitmap.cc  SplashFTFont.cc  SplashFTFontEngine.cc  SplashFTFontFile.cc  SplashFontEngine.cc  SplashPattern.cc  SplashPattern.h
src/: Makefile.am  appdata.h  configuration.c  configuration.h  constant.h  debug.h  gtk-switch.h  i18n.h  main.c  main.h  pdfviewer.cc  pdfviewer.h  rpc.c  rpc.h  settings.c  settings.h  state_save.c  state_save.h  thread_debug.h  utility.c  utility.h
src/ui/: callbacks.c  callbacks.h  interface.c  interface.h  ui.h
xpdf/: Annot.cc  Array.cc  Array.h  CMap.h  Catalog.cc  CharCodeToUnicode.h  Dict.cc  Dict.h  Function.cc  Gfx.cc  Gfx.h  GfxFont.cc  GfxFont.h  GfxState.cc  GlobalParams.cc  GlobalParams.h  JBIG2Stream.cc  Makefile.am  NameToUnicodeTableConst.h  Object.cc  Object.h  OssoOutputDev.cc  OssoOutputDev.h  OssoStream.cc  OssoStream.h  PDFDoc.cc  PDFDoc.h  PSOutputDev.cc  PSOutputDev.h  Page.cc  Page.h  SecurityHandler.cc  SplashOutputDev.cc  SplashOutputDev.h  Stream.cc  UnicodeMap.cc  UnicodeMap.h  UnicodeMapTables.h  UnicodeTypeTable.cc  debug.h  (+1 more)
