noinst_LIBRARIES = libGoo.a

INCLUDES = $(MAEMO_LAUNCHER_CFLAGS)

libGoo_includedir = $(includedir)/goo
libGoo_include_HEADERS =			\
	GHash.h					\
	GList.h					\
	GMutex.h				\
	GString.h				\
	gmem.h					\
	gtypes.h				\
	gmem.h					\
	gfile.h					\
	allocatable.h				\
	chunk.h					\
	defines.h				\
	guard.h					\
	lock.h					\
	nolock.h				\
	pool.h

libGoo_a_SOURCES =				\
	gfile.cc				\
	gmempp.cc				\
	GHash.cc				\
	GList.cc				\
	GString.cc				\
	gmem.c					\
	gmempp.cc				\
	chunk.cpp

